# FINKI-SP2022

./: .gitignore  CMakeLists.txt  README.md
labs/: README.md  lab0_2.c  lab10_1.c  lab10_3.c  lab1_1.c  lab1_2.c  lab1_3.c  lab3_1.c  lab3_2.c  lab3_3.c  lab5_1.c  lab5_2.c  lab5_3.c  lab6_4.c  lab6_5.c  lab6_55.c  lab7_1.c  lab7_2.c  lab7_3.c  lab8_1.c  lab8_2.c  lab8_3.c  lab8_4.c  lab8_5.c  lab9_1.c  lab9_2.c  lab9_3.c
labs/files/: lab10_3 all tests.txt
prv kolokvium vezbi/: zad1.c  zad11.c  zad2.c  zad3.c  zad4.c  zad5.c  zad7.c  zad9.c  zad_1.c  zad_10.c  zad_12.c  zad_13.c  zad_14.c  zad_15.c  zad_6.c  zad_8.c
prv kolokvium vezbi od lab vezbi/: README.md  zad_1.c  zad_2.c
vtor kolokvium_ispit vezbi/: README.md  zad_1.c  zad_2.c  zad_3.c  zad_4.c  zad_8.c
vtor kolokvium_ispit vezbi/files/: text_z1.txt
