cmake_minimum_required(VERSION 3.23)
project(SP2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(SP2022 main.c)
add_executable(I_zad1 "prv kolokvium vezbi/zad1.c")
add_executable(I_zad2 "prv kolokvium vezbi/zad2.c")
add_executable(I_zad3 "prv kolokvium vezbi/zad3.c")
add_executable(I_zad4 "prv kolokvium vezbi/zad4.c")
add_executable(I_zad5 "prv kolokvium vezbi/zad5.c")
add_executable(I_zad6 "prv kolokvium vezbi/zad6.c")
add_executable(I_zad7 "prv kolokvium vezbi/zad7.c")
add_executable(I_zad8 "prv kolokvium vezbi/zad8.c")
add_executable(I_zad9 "prv kolokvium vezbi/zad9.c")
add_executable(I_zad10 "prv kolokvium vezbi/zad10.c")
add_executable(I_zad11 "prv kolokvium vezbi/zad11.c")
add_executable(I_zad12 "prv kolokvium vezbi/zad12.c")
add_executable(I_zad13 "prv kolokvium vezbi/zad13.c")
add_executable(I_zad14 "prv kolokvium vezbi/zad14.c")
add_executable(I_zad15 "prv kolokvium vezbi/zad15.c")