cmake_minimum_required(VERSION 3.23)
project(SP2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(SP2022 main.c)
add_executable(I_zad1 "prv kolokvium vezbi/zad_1.c")
add_executable(I_zad2 "prv kolokvium vezbi/zad_2.c")
add_executable(I_zad3 "prv kolokvium vezbi/zad_3.c")
add_executable(I_zad4 "prv kolokvium vezbi/zad_4.c")
add_executable(I_zad5 "prv kolokvium vezbi/zad_5.c")
add_executable(I_zad6 "prv kolokvium vezbi/zad_6.c")
add_executable(I_zad7 "prv kolokvium vezbi/zad_7.c")
add_executable(I_zad8 "prv kolokvium vezbi/zad_8.c")
add_executable(I_zad9 "prv kolokvium vezbi/zad_9.c")
add_executable(I_zad10 "prv kolokvium vezbi/zad_10.c")
add_executable(I_zad11 "prv kolokvium vezbi/zad_11.c")
add_executable(I_zad12 "prv kolokvium vezbi/zad_12.c")
add_executable(I_zad13 "prv kolokvium vezbi/zad_13.c")
add_executable(I_zad14 "prv kolokvium vezbi/zad_14.c")
add_executable(I_zad15 "prv kolokvium vezbi/zad_15.c")
add_executable(Lab53 "labs/lab5_3.c")