cmake_minimum_required(VERSION 3.23)
project(SP2022 C)

set(CMAKE_C_STANDARD 99)

add_executable(SP2022 main.c)
add_executable(I_zad1 "prv kolokvium vezbi/zad_1.c")
add_executable(I_zad2 "prv kolokvium vezbi/zad_2.c")
add_executable(I_zad3 "prv kolokvium vezbi/zad_3.c")
add_executable(I_zad4 "prv kolokvium vezbi/zad_4.c")
add_executable(I_zad5 "prv kolokvium vezbi/zad_5.c")
add_executable(I_zad6 "prv kolokvium vezbi/zad_6.c")
add_executable(I_zad7 "prv kolokvium vezbi/zad_7.c")
add_executable(I_zad8 "prv kolokvium vezbi/zad_8.c")
add_executable(I_zad9 "prv kolokvium vezbi/zad_9.c")
add_executable(I_zad10 "prv kolokvium vezbi/zad_10.c")
add_executable(I_zad11 "prv kolokvium vezbi/zad_11.c")
add_executable(I_zad12 "prv kolokvium vezbi/zad_12.c")
add_executable(I_zad13 "prv kolokvium vezbi/zad_13.c")
add_executable(I_zad14 "prv kolokvium vezbi/zad_14.c")
add_executable(I_zad15 "prv kolokvium vezbi/zad_15.c")
add_executable(II_zad1 "vtor kolokvium_ispit vezbi/zad_1.c")
add_executable(II_zad2 "vtor kolokvium_ispit vezbi/zad_2.c")
add_executable(II_zad3 "vtor kolokvium_ispit vezbi/zad_3.c")
add_executable(II_zad4 "vtor kolokvium_ispit vezbi/zad_4.c")
add_executable(Lab53 "labs/lab5_3.c")
add_executable(Lab64 "labs/lab6_4.c")
add_executable(Lab65 "labs/lab6_5.c")
add_executable(Lab655 "labs/lab6_55.c")
add_executable(Lab52 "labs/lab5_2.c")
add_executable(Lab72 "labs/lab7_2.c")
add_executable(Lab83 "labs/lab8_3.c")
add_executable(Lab81 "labs/lab8_1.c")
add_executable(Lab84 "labs/lab8_4.c")
add_executable(Lab85 "labs/lab8_5.c")
add_executable(Lab92 "labs/lab9_2.c")
add_executable(Lab103 "labs/lab10_3.c")